<resources>
    <string name="app_name">GolfScoreCard</string>
    <string name="title">Golf ScoreCard!</string>
    <string name="hole">How Many Holes?</string>
    <string name="players">How Many Players?</string>
    <string name="start">Start Game</string>
    <string name="name">Enter a Name for Players!</string>
    <string name="add">add</string>
    <string name="courseName">Golfcourse</string>
    <string name="enterName">Add Players</string>
    <string name="setName">What is the Name of the Course?</string>
</resources>